Squashed commit of the following:
commit 9f3a7253b90ad9a09a19a1f54ecd1803f13f050a
Author: kkmitra <kaushik.mitra@innoraft.com>
Date:   Sat May 2 21:03:06 2020 +0530

    Added the navbar

    - Implemented the mobile view for the navbar
    - Implemented the desktop view for the navbar
    - Added a variable $danger for setting the logout btn color

commit 8a799047e334c261af448eafdbcd5e9953205749
Author: kkmitra <kaushik.mitra@innoraft.com>
Date:   Sat May 2 18:38:08 2020 +0530

    Imported bootstarp files

    - Imported the whole bootstrap library
    - Imported the navbar part
    - Commented them for references

commit b14e0fd0434a7910cc277ae70a4aff266c952469
Author: kkmitra <kaushik.mitra@innoraft.com>
Date:   Sun Apr 26 17:43:06 2020 +0530

    Added some styles

    Added the styles to the home page, book-listing page and book page.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,19 +1,14 @@
-// Body
-$body-bg: #f8fafc;
-
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+$ff: $font-family-sans-serif;
 
-// Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+$white: #fff;
+$gray: rgb(206, 206, 206);
+$black: #000;
+
+$bg-color: #242424;
+$color: $white;
+
+$primary: #487BFF;
+$secondary: #29E5FF;
+$danger: #ff1313;
