Updated the logo font
- Added a google font
- Updated the navbar logo with the font

--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -11,6 +11,8 @@
     text-align: center;
 
     a {
+      // font-family: 'Dancing Script', cursive;
+      font-family: 'Shadows Into Light', cursive;
       text-decoration: none;
       color: $white;
     }
