--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
 .main__navigation {
   background-color: #487BFF;
   margin-bottom: 1em;
@@ -11,6 +13,7 @@
   text-align: center;
 }
 .main__navigation__logo a {
+  font-family: "Shadows Into Light", cursive;
   text-decoration: none;
   color: #fff;
 }
