--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,20 +2,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
 .main__navigation {
-  background-color: #487BFF;
+  background-color: #162447;
   margin-bottom: 1em;
   position: relative;
 }
-.main__navigation__logo {
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  font-size: 3rem;
-  text-align: center;
-}
 .main__navigation__logo a {
-  font-family: "Shadows Into Light", cursive;
-  text-decoration: none;
-  color: #fff;
+  display: block;
+  width: 100px;
+  display: flex;
+  align-items: center;
 }
 .main__navigation .container {
   display: flex;
@@ -25,7 +20,7 @@
 .menu {
   list-style-type: none;
   position: absolute;
-  background-color: #487BFF;
+  background-color: #162447;
   top: 100%;
   right: 0;
   left: 0;
@@ -63,7 +58,7 @@
   width: 30px;
   height: 2px;
   border-radius: 3px;
-  background-color: #fff;
+  background-color: #d6d6d6;
   position: relative;
 }
 .navbar-toggle-label span::before,
@@ -107,46 +102,57 @@
     right: 0;
     bottom: -0.2em;
     height: 3px;
-    background-color: black;
+    background-color: #29E5FF;
     transform: scale(0, 1);
     transition: transform 250ms ease-in-out;
   }
 
   .menu__link:hover {
-    color: black;
+    color: #29E5FF;
   }
   .menu__link:hover::before {
     transform: scale(1, 1);
   }
 
   .menu__link--danger:hover {
-    color: #ff1313;
+    color: #e43f5a;
   }
   .menu__link--danger::before {
-    background-color: #ff1313;
+    background-color: #e43f5a;
   }
 }
 .form {
-  margin-top: 2em;
   box-shadow: 10px 0 100px 0 rgba(0, 0, 0, 0.5);
   padding: 4em 2em;
 }
 
-.form__label {
-  font-size: 1.5rem;
-}
-
-.form__group {
+.form__group + .form__group {
   margin: 1em 0;
 }
 
 .form__input {
   width: 100%;
-  margin-top: 0.5em;
-  padding: 0.5em 1em;
-  font-size: 1.5rem;
+  padding: 1em;
+  color: #d6d6d6;
+  margin-top: 0.2em;
+  border: none;
+  border-radius: 5px;
+  background-color: #1b1b2f;
+  box-shadow: inset 0 0 100px 0 rgba(0, 0, 0, 0.5);
+  font-family: "Nunito", sans-serif;
 }
 
+.error-message {
+  color: #e43f5a;
+  font-size: 0.7rem;
+}
+
+@media only screen and (min-width: 600px) {
+  .form {
+    margin: auto;
+    width: 80%;
+  }
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -154,8 +160,8 @@
 }
 
 body {
-  background-color: #242424;
-  color: #fff;
+  background-color: #1b1b2f;
+  color: #d6d6d6;
   font-family: "Nunito", sans-serif;
 }
 
@@ -165,36 +171,61 @@ body {
 }
 
 .page__header {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .list {
   margin: 1em 0;
   list-style-type: none;
 }
+.list--grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1em;
+}
 .list-item {
-  background-color: #487BFF;
-  margin-bottom: 1em;
-  padding: 1em;
+  background-color: #162447;
+  padding: 1em 2em;
 }
 .list-item__title {
   font-size: 2rem;
-  margin-bottom: 0.5em;
+  display: flex;
+  align-items: center;
 }
 .list-item__link {
   text-decoration: none;
-  color: #fff;
+  color: #d6d6d6;
 }
 .list-item__body {
   margin-bottom: 0.5em;
-  color: #cecece;
+  color: #d6d6d6;
 }
 .list-item__footer {
-  color: #cecece;
+  color: lightgray;
   font-size: 0.8rem;
 }
 .list-item__footer::before {
   content: "- ";
+}
+.list-item__group {
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  margin-bottom: 0.5em;
+}
+.list-item__button {
+  color: #29E5FF;
+  font-weight: bold;
+}
+.list-item__button:hover {
+  color: #d6d6d6;
+}
+.list-item__image-container {
+  display: flex;
+  align-items: center;
+}
+
+.image {
+  width: 100%;
 }
 
 .book__title {
@@ -202,7 +233,7 @@ body {
 }
 .book__author-name {
   font-size: 0.7rem;
-  color: #cecece;
+  color: #1f4068;
   font-style: italic;
 }
 .book__author-name::before {
@@ -215,8 +246,7 @@ body {
 .button {
   display: inline-block;
   text-decoration: none;
-  padding: 1em 2em;
-  margin: 1em 0;
+  padding: 0.5em 2em;
   border: none;
   font-family: "Nunito", sans-serif;
   font-size: 1.5rem;
@@ -224,12 +254,12 @@ body {
 
 .button--secondary {
   background-color: #29E5FF;
-  color: #000;
+  color: #1b1b2f;
 }
 
 .button--primary {
-  background-color: #487BFF;
-  color: #000;
+  background-color: #162447;
+  color: #d6d6d6;
 }
 
 .u-display-none {
