--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,13 +2,14 @@
 $font-family-sans-serif: 'Nunito', sans-serif;
 $ff: $font-family-sans-serif;
 
-$white: #fff;
-$gray: rgb(206, 206, 206);
-$black: #000;
+$white: rgb(214, 214, 214);
+$gray: #1f4068;
+$black: #1b1b2f;
 
-$bg-color: #242424;
+// $bg-color: #242424;
+$bg-color: $black;
 $color: $white;
 
-$primary: #487BFF;
+$primary: #162447;
 $secondary: #29E5FF;
-$danger: #ff1313;
+$danger: #e43f5a;
