--- a/public/css/app.css
+++ b/public/css/app.css
@@ -147,6 +147,10 @@
   font-size: 0.7rem;
 }
 
+.is-invalid {
+  border: 1px solid #e43f5a;
+}
+
 @media only screen and (min-width: 600px) {
   .form {
     margin: auto;
