--- a/resources/sass/_form.scss
+++ b/resources/sass/_form.scss
@@ -28,6 +28,11 @@
 
 }
 
+.is-invalid {
+    border: 1px solid $danger;
+    // box-shadow: inset 0 0 100px 0 rgba($color: $danger, $alpha: 0.1);
+}
+
 @media only screen and (min-width: 600px) {
 
     .form {
