--- a/resources/sass/_form.scss
+++ b/resources/sass/_form.scss
@@ -36,8 +36,9 @@
 @media only screen and (min-width: 600px) {
 
     .form {
-        margin: auto;
-        width: 80%;
+        // margin: auto;
+        // width: 80%;
+        padding: 4em 6em;
     }
 
 }
